--- a/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/index.html
+++ b/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- xbb-pro -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1020340_i85dyk5033.css">
+    <!-- xbb-pro-web -->
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1020343_4mx6m9i38rj.css">
     <title>硅谷甄选运营平台</title>
   </head>
   <body>
